tests/neg-custom-args/no-experimental/i13848.scala
import annotation.experimental

@main
def run(): Unit = f // error

@experimental
def f = 2
